frontend login and registration page finish

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -47,15 +47,14 @@
     </p>
     <br>
     <br>
-    <hr>
+
     <div id="newacc">
       <span class="or">Or </span> <br>
-      <span class="b"> <a href="/register.css">Create Account<span class="material-icons">keyboard_arrow_right
-          </span></a></span>
+      <span class="b"> <a href="/register">Create Account</a></span>
 
     </div>
   </div>
-</body>
+</body>ss
 <script src="/js/app.js"></script>
 
 </html>
