--- a/public/style/login.css
+++ b/public/style/login.css
@@ -15,6 +15,10 @@ font-family: 'Noto Sans TC', sans-serif;
 }
 
 .login{
+    padding-top: 30px;
+    /* padding-left: 30px; */
+    /* padding-right: 30px; */
+
     height: 500px;
     width: 400px;
     margin-top: 80px;
@@ -29,10 +33,7 @@ font-family: 'Noto Sans TC', sans-serif;
     /* position: absolute; */
   
 }
-.login:hover{
-    border-color: orange;
 
-}
 
 #logintext{
     margin-left: 30px;
@@ -55,6 +56,7 @@ form{
 
 }
 input{
+    /* padding-left: 3px; */
     height: 40px;
     width: 350px;
     background-color: transparent;
@@ -79,19 +81,24 @@ input::placeholder{
 
 
 #loginbutton{
-    padding: 5px;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-left: 150px;
     background-color: transparent;
-    font-size: 25px;
+    font-size: 20px;
+    padding: 10px;
+
     display: flex;
     align-items: center;
     outline: none;
-    border: 1px solid white;
-    border-radius: 10px;
+    border: none;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    border-radius: 20px;
+
 }
 #loginbutton:hover{
-    background-color: orange;
+    /* border: 1px solid white; */
+    color: rgb(20, 255, 11);
 
 }
 
@@ -101,30 +108,31 @@ input::placeholder{
 }
 
 
-hr{
-    color: orangered;
-    background-color: orangered;
-}
+
  #newacc{
      text-align: center; 
 } 
 
 #newacc .or {
     background-color:#9543E3;
-    font-size: 30px;
+    font-size: 15px;
     position: absolute;
-    top:537px;
-    left:760px;
+    top:615px;
+    left:770px;
 }
 
 
 #newacc .b a {
-display: flex;
+    /* background-color: white; */
+    margin-top: 30px;
+/* display: flex; */
 text-decoration: none;
 justify-content: center;
+font-size: 15px;
 
 }  
 
 #newacc .b a:hover{
-    color: orangered;
+    border-bottom: 1px solid white;
+
 }
