login and register page design  is complete  and register form validation from frontend js is done

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -18,7 +18,7 @@
     <span class="material-icons biglogo">
       supervised_user_circle
     </span>
-    <form action="/getdata" method="POST">
+    <form action="/login" method="POST">
       <span id="logintext">Login</span><br>
       <div class="usernamediv">
         <span class="material-icons">
