--- a/public/style/register.css
+++ b/public/style/register.css
@@ -22,7 +22,7 @@ form .icon{
 }
 form{
     padding: 20px;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 60px;
 
     border: 2px solid white;
@@ -71,4 +71,12 @@ input::placeholder{
 .material-icons{
     text-align: center;
     margin-bottom: 5px;
+}
+
+p{
+    margin-top: 15px;
+    height: 20px;
+    text-align: center;
+    font-size: 25px;
+    color:#850201;
 }
