removing index.js

--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -4,9 +4,9 @@
     </div>
     <nav>
         <a href="/">Home</a>
-        <a href="/myinfo">My info</a>
+        {{!-- <a href="/myinfo">My info</a>
         <a href="/help">Help</a>
-        <a href="/about">About</a>
+        <a href="/about">About</a> --}}
         <a href="/login">Login</a>
     </nav>
     {{!-- <div class="search">
