adding some files

--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -4,19 +4,11 @@
     </div>
     <nav>
         <a href="/">Home</a>
-        {{!-- <a href="/myinfo">My info</a>
+        <a href="/myinfo">My info</a>
         <a href="/help">Help</a>
-        <a href="/about">About</a> --}}
+        <a href="/about">About</a>
         <a href="/login">Login</a>
     </nav>
-    {{!-- <div class="search">
-     <input id="navinput" type="text">
-       <button>
-         <span class="material-icons">
-            search
-        </span>
-       </button>
-    </div> --}}
      <input  type="text" id="navinput"placeholder="Search">
        <button>
          <span class="material-icons">
