--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -24,7 +24,7 @@
         <span class="material-icons">
           account_circle
         </span>
-        <input type="text" name="user" placeholder="Username">
+        <input type="text" name="username" placeholder="Username">
       </div>
 
       <br>
@@ -36,7 +36,7 @@
         <span class="material-icons">
           vpn_key
         </span>
-        <input type="password" name="pass" id="inputtext" placeholder="Password">
+        <input type="password" name="password" id="inputtext" placeholder="Password">
       </div>
 
       <button id="loginbutton" type="submit">Login<span class="material-icons">keyboard_arrow_right
