--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,18 +1,21 @@
-<div class="navdiv">
+<div class="navmaindiv">
     <div class="logo">
-        <a href="/"> <img src="/src/img/logo4.png" alt=""></a>
+        <a href="/"> <img src="/media/img/logo4.png" alt=""></a>
     </div>
+    <div class="nav">
     <nav>
         <a href="/">Home</a>
-        <a href="/myinfo">My info</a>
-        <a href="/help">Help</a>
+        <a href="/blog">Blog</a>
         <a href="/about">About</a>
         <a href="/login">Login</a>
     </nav>
+    </div>
+    <div class="search">
      <input  type="text" id="navinput"placeholder="Search">
        <button>
          <span class="material-icons">
             search
         </span>
        </button>
+       </div>
 </div>
