--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <meta charset="UTF-8">
@@ -10,7 +11,10 @@
 </head>
 <body>
     {{>nav}}
-   
+    <div class="main">
+      
+    </div>
+    {{>footer}}
 </body>
 <script src="/js/app.js"></script>
 </html>
