--- a/templates/views/conformregistration.hbs
+++ b/templates/views/conformregistration.hbs
@@ -2,27 +2,50 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="/style/styles.css">
-  <link rel="stylesheet" href="/style/confirm.css">
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 
 <body>
-  {{>nav}}
-      <div id="error">
-              <p></p>
-          </div>
-  <div>
-    <p id="username"></p>
-    <p id="checkval">{{check}}</p>
-    <input type="text" id="typedtext"><br>
-    <button onclick="check()"> validate </button>
-
-  </div>
+  <form action="/test" method="GET">
+    <input type="text" name="name" id="user">
+    <input type="password" name="password" id="pass">
+    <button>Submit</button>
+  </form>
 </body>
-<script src="/js/localstorage.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+  const form = document.querySelector('form')
+
+  form.addEventListener('submit', (e) => {
+    axios.post('http://localhost:3000/test', {
+      firstName: document.querySelector('#user').value,
+      lastName: document.querySelector('#pass').value
+    })
+      .then(res => {
+         console.log(res)
+      })
+      .catch(error => {
+        if (error.response) {
+          // The request was made and the server responded with a status code
+          // that falls out of the range of 2xx
+          console.log(error.response.data);
+          console.log(error.response.status);
+          console.log(error.response.headers);
+        } else if (error.request) {
+          // The request was made but no response was received
+          // `error.request` is an instance of XMLHttpRequest in the browser and an instance of
+          // http.ClientRequest in node.js
+          console.log(error.request);
+        } else {
+          // Something happened in setting up the request that triggered an Error
+          console.log('Error', error.message);
+        }
+        console.log('Tis is', error.config);
+      })
+      e.preventDefault();
+  })
+</script>
 
 </html>
