adding auth route for middleware , adding /me route for user profile , and making the ui for user profile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,11 +4,14 @@
   margin: 0;
   font-family: "Noto Sans TC", sans-serif;
 }
-body{
+
+
+body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
 /* navigation */
 .navmaindiv {
   display: flex;
@@ -22,48 +25,72 @@ body{
   margin-left: 10px;
 }
 
+
 /* pages or a tags in navigation */
-nav a {
+nav a , .loginButton{
   color: black;
   margin-left: 25px;
   font-size: large;
   text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
   border-bottom: 1px solid black;
-  }
+}
 
 nav {
   margin-top: 10px;
   text-align: center;
 }
 
-.search{
-    height: 40px;
-    margin-top: 10px;
-    display: flex;
-    border-bottom: 1px solid black; 
+.search {
+  height: 40px;
+  margin-top: 10px;
+  display: flex;
+  border-bottom: 1px solid black;
 }
 
- input{
-    border: none;
-    background-color: transparent;
-    outline: none;
-    text-align: center;
+input {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  text-align: center;
 }
 
-.search input::placeholder{
-    color: rgb(103, 101, 105);
-    font-size: 15px;
-    text-align: center;
+.search input::placeholder {
+  color: rgb(103, 101, 105);
+  font-size: 15px;
+  text-align: center;
 }
 
- button{
-    border: none;
-    background-color: transparent;
-    outline: none;
+button {
+  border: none;
+  background-color: transparent;
+  outline: none;
 }
-.search button:hover{
-color: orangered;
+.search button:hover {
+  color: orangered;
+}
+
+
+.loginBut{
+  display: flex;
+  margin: 10px;
+}
+
+.loginButton{
+  align-self: center;
+}
+
+
+/* Profile pic logo on nav bar  */
+.pp{
+margin-left: 10px;
+height: 30px;
+width: 30px;
+border-radius: 50%;
+} 
+
+.bodydiv{
+  flex-grow: 1;
 }
