--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,21 +1,39 @@
 <div class="navmaindiv">
+
     <div class="logo">
         <a href="/"> <img src="/media/img/logo4.png" alt=""></a>
     </div>
+
+
     <div class="nav">
-    <nav>
-        <a href="/">Home</a>
-        <a href="/blog">Blog</a>
-        <a href="/about">About</a>
-        <a href="/login">Login</a>
-    </nav>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/blog">Blog</a>
+            <a href="/about">About</a>
+        </nav>
     </div>
+
+
+     <div class="loginBut">
+        <a href="/login" id="logText" class="loginButton">Login</a>
+        <a href="/login" class="loginButtonImg">
+        <img src="/media/img/dummy.jpg" class="pp" />
+        </a>
+    </div> 
+
+{{!--     <a href="">Helo
+        <img src="/media/img/mypic.jpg" class="pp" />
+    </a> --}}
+
+
     <div class="search">
-     <input  type="text" id="navinput"placeholder="Search">
-       <button>
-         <span class="material-icons">
-            search
-        </span>
-       </button>
-       </div>
+        <input type="text" id="navinput" placeholder="Search">
+        <button>
+            <span class="material-icons">
+                search
+            </span>
+        </button>
+    </div>
+
+
 </div>
