--- a/templates/views/test.hbs
+++ b/templates/views/test.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <meta charset="UTF-8">
@@ -9,12 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    {{>nav}}
-    <div class="bodydiv">
-      
-    </div>
-    {{>footer}}
+ hi i am test
 </body>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+{{!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> --}}
 <script src="/js/app.js"></script>
 </html>
