styling update page inside /me

--- a/public/style/profile.css
+++ b/public/style/profile.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap");
 
+
 .navmaindiv {
   display: none;
 }
@@ -13,8 +14,8 @@
 }
 .maindiv {
   /* margin: 100px; */
-  margin: 35px;
-  min-height: 88vh;
+  /* margin: 35px; */
+  min-height: 100vh;
   display: flex;
   /* background-color: aqua; */
 }
@@ -22,6 +23,7 @@
 /* main-child-1 */
 .main-child-1 {
   padding: 5px;
+  margin: 80px 80px;
   /* background-color: rgb(125, 106, 143); */
   display: flex;
   flex-direction: column;
@@ -109,7 +111,7 @@ img {
 /* .main-child-3 */
 .main-child-3 {
   /* background-color: blue; */
-  margin-top: 50px;
+  margin: 80px 80px;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
@@ -148,48 +150,135 @@ img {
   color: rgb(146, 81, 250);
 }
 
-/* /test */
-/* =================================== */
-.test {
-  height: 100vh;
-  width: 100%;
+
+
+/* .update */
+.updatediv {
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
-  background-color: rgba(255, 255, 255, 0.521);
+  box-shadow: 2px 2px 5px black;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.466), rgba(0, 0, 0, 0.4)),
+    url("/media/img/background.jpg");
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
+
+
+.updatediv p {
+  margin-top: 30px;
   position: absolute;
-  /* z-index: -1; */
-}
-
-.testing {
-  align-self: center;
-  width: 600px;
-  height: 300px;
-  position: relative;
-  background-color: rgb(240, 238, 238);
-  box-shadow: 3px 3px 3px black, -9px -9px 3px white;
-
-}
-
-.warnmsg{
-    text-align: center;
-  color: red;
-  font-weight: bold;
-}
-
-
-
-/* Warning message  */
-.notify{
+  color: white;
+  background-color: transparent;
+  width: 100%;
   text-align: center;
   font-size: 30px;
-  margin-top: 70px;
-  /* background-color: blue; */
 }
 
-/* .logout */
-.logoutdiv{
-  display: flex;
-  /* background-color: rgb(255, 0, 128); */
-  justify-content: space-evenly;
-  margin-top: 10px;
+
+ /* LIness */
+.verticalline {
+  position: absolute;
+  height: 70vh;
+  width: 1px;
+  background-color: white;
+  align-self: center;
+  margin: 0 50%;
+  margin-top: 30px;
+  /* box-shadow: 2px 2px 6px black , -2px -2px 6px black; */
 }
+
+.horizantalline{
+  position: absolute;
+  height: 1px;
+  width: 40vh;
+  background-color: white;
+  margin: 5% 40%;
+}
+
+
+.bio-update-div {
+  background-color: transparent;
+  width: 50%;
+}
+
+.forget-password-div {
+  background-color: transparent;
+  width: 50%;
+}
+
+
+
+
+/* forms */
+ form {
+  background-color: #c7c7c76c;
+  /* background-color: aliceblue; */
+  border: 1px solid ffffff6c;
+  height: 500px;
+  width: 400px;
+  margin: 150px 1px 1px 150px;
+  /* color: rgb(44, 44, 44); */
+  color: white;
+  display: flex;
+}
+
+.form{
+  background-color: transparent;
+  /* background-color: aqua; */
+  /* position: relative; */
+
+  margin-top: 100px;
+  margin:  50px 0 ;
+  /* margin-top: 10px; */
+  width: 100%;
+}
+form input{
+  text-align: left;
+  color: white;
+  padding :10px;
+  /* background-color: aqua; */
+  border-bottom: 1px solid white;
+  margin: 30px 50px;
+  /* margin: 50px 0 0 0 ; */
+  width: 70%;
+}
+
+.topic{
+  font-size: 20px;
+  background-color:transparent;
+  color: white;
+  padding :10px;
+  margin: 30px 50px;
+  margin-bottom: 10px;
+  /* border-bottom: 1px solid white; */
+}
+form button{
+   color: white;
+   padding :10px;
+
+  border: 1px solid white;
+  margin: 30px 50px;
+  width: 75%;
+}
+form button:hover{
+/* color: #575D60; */
+background-color: #575D60;
+
+}
+
+form input::placeholder{
+  color: rgb(142, 142, 143);
+}
+
+/* .topic{
+  border-radius: 10px;
+  border-bottom: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  background-color: transparent;
+   text-align: center;
+   padding: 10px;
+   margin: 100% 25%;
+   font-size: 20px;
+} */
